--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=8080
 # Database Connection Settings
 spring.datasource.url=jdbc:mysql://localhost:3306/freelance_db
 spring.datasource.username=root
-spring.datasource.password=adhikuttan
+spring.datasource.password=NewPassword123!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA/Hibernate Settings
